Fixed flipcards on safari

--- a/src/pages/Experience/components/Flipcard.css
+++ b/src/pages/Experience/components/Flipcard.css
@@ -8,6 +8,7 @@
     width: 100%;
     transition: transform 0.8s;
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
 }
 
 .flipcard-inner-container.flipped {
